# pdf_ocr_prep

./: .gitignore  LICENSE  README.md  pdfocr-cli-handoff-prompt.md  pyproject.toml
src/pdfocr/: __init__.py  cli.py  convert.py  deps.py  detect.py  discover.py  errors.py  verify.py
tests/: conftest.py  test_cli.py  test_convert.py  test_detect.py  test_discover.py  test_verify.py
